fix missing pages

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -27,15 +27,15 @@
     </div>
     <a class="btn" href="elga.html" target="ContentFrame">Lasallian Graduate Attributes</a><br />
     <div class="btn-group">
-        <a class="btn" href="PEO.html" target="ContentFrame">Program Educational Objectives</a><br />
+        <a class="btn" href="peo.html" target="ContentFrame">Program Educational Objectives</a><br />
         <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="collapse"
             data-bs-target="#PEOMenu" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
         </button>
     </div><br />
     <div class="collapse" id="PEOMenu">
-        <a class="btn" href="PEO.html#EE" target="ContentFrame">Electronic Engineering</a><br />
-        <a class="btn" href="PEO.html#CPE" target="ContentFrame">Computer Engineering</a><br />
+        <a class="btn" href="peo.html#EE" target="ContentFrame">Electronic Engineering</a><br />
+        <a class="btn" href="peo.html#CPE" target="ContentFrame">Computer Engineering</a><br />
     </div>
 
     <div class="btn-group">
