fix missing pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="row" style="height:80%;">
         <div class="col-sm-8">
-          <iframe src="Home.html" name="ContentFrame"></iframe>
+          <iframe src="home.html" name="ContentFrame"></iframe>
         </div>
         <div class="col-4">
           <iframe src="Sidebar.html"></iframe>
